== 0.6.2 Rambo release
 * Restructure thin script options in 3 sections: server, daemon and cluster
 * Add --only (-o) option to control only one server of a cluster.
 * Stylize stats page and make the url configurable from the thin script.
 * Raise error if attempting to use unix sockets on windows.
 * Add example config files for http://www.tildeslash.com/monit useage.
   Include the example file using "include /path/to/thin/monit/file" in your monitrc file.
   The group settings let you do this to manage your clusters:
   
     sudo monit -g blog restart all
    
   There are examples of thin listening on sockets and thin listening on unix sockets.

== 0.6.1 Cheesecake release
 * Remove socket file when server stops.
 * Set back cluster to use 'thin' command to launch servers.

== 0.6.0 Big Pony release
 * Add support for connection through UNIX domain socket.
   Use the --socket (-S) option w/ the thin script to configure the socket filename.
   Nginx support binding to a UNIX socket like this:
   
     upstream  backend {
       server   unix:/tmp/thin.0.sock;
       server   unix:/tmp/thin.1.sock;
       server   unix:/tmp/thin.2.sock;
     }
  
   Start your servers like this:
   
     thin start -s3 -S/tmp/thin.sock
   
 * Remove Server#listen! method. Use Server#start instead.
 * Server can now yield a Rack::Builder to allow building an app in one call:
 
     Server.start '0.0.0.0', 3000 do
       use Rack::CommonLogger
       use Rack::ShowExceptions
       map "/lobster" do
         use Rack::Lint
         run Rack::Lobster.new
       end
     end
     
 * Add a very basic stats page through Stats adapter, load w/ --stats and browse to /stats.
 * Add --trace (-V) option to trace request/response and get backtrace w/out all Ruby debug stuff.
 * Add --config (-C) option to load options from a config file in thin script [Matt Todd].
 * Alter response headers to output directly to a string.
 * Improve specs stability.